@@ -1,3 +1,11 @@
+2000-02-24  Nick Clifton  <nickc@cygnus.com>
+
+	* configure.in: Add arm-wince, mips-pe and sh-pe targets.
+	* configure: Regenerate.
+
+	* dlltoolc.: Add support for sh-pe and mips-pe targets.
+	* rescoff.c: Add support for sh-pe and mips-pe targets.
+
 2000-02-23  H.J. Lu  <hjl@gnu.org>
 
 	* readelf.c (get_osabi_name): Handle ELFOSABI_LINUX.
